# experimaestro-ir

./: .flake8  .github_changelog_generator  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  README.md  cliff.toml  conftest.py  cspell.json  mkdocs.requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
.circleci/: config.yml
.github/: release.yaml
.github/workflows/: pytest.yml  python-publish.yml
docs/: README.md  index.md  letor.md  misc.md  neural.md  requirements.txt  rtd.sh
docs/source/: cli.rst  conf.py  datasets.rst  evaluation.rst  experiments.rst  hooks.rst  index.rst  indexbased.rst  letor.rst  misc.rst  neural.rst  papers.rst  pipelines.rst  pretrained.rst  retrieval.rst
docs/source/code/: index.rst  monobert.rst
docs/source/conversation/: index.rst
docs/source/data/: adapters.rst  index.rst  irds.rst  types.rst  xpmir.rst
docs/source/learning/: index.rst  optimization.rst
docs/source/letor/: alignment.rst  batchwise.rst  distillation.rst  generation.rst  generative.rst  index.rst  mlm.rst  optimization.rst  pairwise.rst  pointwise.rst  samplers.rst  trainers.rst
docs/source/papers/: index.rst  monobert.rst  splade.rst
docs/source/text/: huggingface.rst  index.rst  wordvec.rst
examples/: bm25.py  experiment.py  first-stage.py  msmarco-rerank.py  msmarco.py  neural-ir.py  splade.py
experimaestro_ir/: __init__.py  anserini.py  definitions.py  evaluation.py  models.py  trec.py  utils.py
experimaestro_ir/dm/: __init__.py
experimaestro_ir/dm/data/: anserini.py
experimaestro_ir/matchzoo/: __init__.py
experimaestro_ir/metrics/: __init__.py  fallback.py  gdeval.py  judged.py  msmarco.py  pytreceval.py  treceval.py
experimaestro_ir/neural/: __init__.py  capreolus.py
experimaestro_ir/neural/onir/: __init__.py  pipelines.py  rankers.py  trainers.py  vocab.py
hf_models/: README.md  splade.py  tas_balanced.py
snippets/irds/: irds-documents.py  irds-qrels.py  irds-query.py
src/xpmir/: __init__.py  __main__.py  compat.py  context.py  distributed.py  evaluation.py  measures.py  misc.py  models.py
src/xpmir/configuration/: __init__.py
src/xpmir/conversation/: records.py
src/xpmir/datasets/: adapters.py  msmarco.py  samplers.py
src/xpmir/dm/: __init__.py
src/xpmir/documents/: samplers.py
src/xpmir/experiments/: __init__.py  cli.py  ir.py  learning.py
src/xpmir/index/: __init__.py  anserini.py  bow.py  faiss.py  plaid.py  sparse.py
src/xpmir/interfaces/: anserini.py  apex.py  plaintext.py
src/xpmir/learning/: __init__.py  base.py  batchers.py  context.py  devices.py  hooks.py  learner.py  losses.py  metrics.py  optim.py  parameters.py  trainers.py
src/xpmir/letor/: __init__.py  context.py  learner.py  optim.py  processors.py  records.py  samplers.py  validation.py
src/xpmir/metrics/: __init__.py
src/xpmir/mlm/: samplers.py  trainer.py
src/xpmir/neural/: __init__.py  colbert.py  common.py  cross.py  dual.py  generative.py  huggingface.py  jointclassifier.py  sentence_transformers.py  splade.py
src/xpmir/papers/: __init__.py  cli.py  results.py
src/xpmir/rankers/: __init__.py  adapters.py  full.py  misc.py  retriever.py  scorer.py  standard.py
src/xpmir/test/: __init__.py  test_documented.py
src/xpmir/text/: __init__.py  adapters.py  encoders.py  huggingface.py  tokenizers.py  utils.py  wordvec_vocab.py
src/xpmir/tokenization/: align.py  tokenizers.py
src/xpmir/utils/: convert.py  functools.py  iter.py  logging.py  misc.py  multiprocessing.py  torch.py  utils.py
xpmir/: __init__.py  __main__.py  compat.py  context.py  distributed.py  evaluation.py  measures.py  mkdocs_init.py  models.py  utils.py
xpmir/configuration/: __init__.py
xpmir/datasets/: adapters.py  msmarco.py  robust.py
xpmir/datasets/irds/: __init__.py  data.py  datasets.py
xpmir/dm/data/: anserini.py  base.py
xpmir/documents/: samplers.py
xpmir/index/: __init__.py  anserini.py  base.py  faiss.py  sparse.py
xpmir/interfaces/: anserini.py  apex.py  faiss.py  msmarco_eval.py  trec.py
xpmir/letor/: __init__.py  batchers.py  context.py  devices.py  learner.py  metrics.py  optim.py  records.py  samplers.py  schedulers.py  traininfo.py  utils.py
xpmir/letor/datasets/: robust.py
xpmir/letor/distillation/: pairwise.py  samplers.py
xpmir/letor/trainers/: __init__.py  batchwise.py  multiple.py  pairwise.py  pointwise.py
xpmir/metrics/: __init__.py  base.py  fallback.py  gdeval.py  judged.py  msmarco.py  pytreceval.py  treceval.py
xpmir/neural/: __init__.py  colbert.py  common.py  cross.py  drmm.py  dual.py  huggingface.py  jointclassifier.py  pretrained.py  siamese.py  splade.py
xpmir/neural/interaction/: __init__.py  drmm.py
xpmir/neural/modules/: __init__.py  bert.py  interaction_matrix.py  rbf_kernels.py
xpmir/papers/: __init__.py  cli.py  duobert.py
xpmir/papers/duobert/: __init__.py  duobert.py  experiment.py  normal.yaml  small.yaml
xpmir/papers/monobert/: __init__.py  configuration.py  evaluation_large.py  evaluation_large.yaml  experiment.py  experiment_car.py  lr_1e-6.yaml  lr_3e-7.yaml  lr_6e-7.yaml  medium.yaml  normal.yaml  normal_type.yaml  small.yaml  small_car.yaml
xpmir/papers/splade/: __init__.py  experiment.py  experiment_DistilMSE.py  experiment_doc.py  experiment_tas.py  normal.yaml  normal_DistilMSE.yaml  normal_doc.yaml  small.yaml
xpmir/pipelines/: reranking.py
xpmir/rankers/: __init__.py  anserini.py  full.py  mergers.py  standard.py
xpmir/rankers/neural/: __init__.py  drmm.py
xpmir/tasks/: evaluate.py  learner.py
xpmir/test/: test_base.py  utils.py
xpmir/test/index/: test_faiss.py  test_sparse.py  utils.py
xpmir/test/letor/: test_samplers.py  test_trainers.py
xpmir/test/neural/: test_forward.py
xpmir/test/rankers/: test_full.py
xpmir/text/: __init__.py  encoders.py  huggingface.py  wordvec_vocab.py
xpmir/tokenization/: align.py  tokenizers.py
xpmir/utils/: utils.py
xpmir/vocab/: __init__.py  bert_vocab.py  encoders.py  huggingface.py  wordvec_vocab.py
(+122 files in other folders)
