[project]
name = "experimaestro-ir"
requires-python = ">=3.10"
keywords = ["neural information retrieval", "information retrieval", "experiments"]
description = "Experimaestro common module for IR experiments"
dynamic = ["version"]
readme = "README.md"
license = {text = "GPL-3"}
authors = [
    { name = "Benjamin Piwowarski",  email = "benjamin@piwowarski.fr" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Experimaestro
    "experimaestro>=2.0.0b6",
    "datamaestro>=1.0.1",
    "datamaestro_text>=2025.7.28",
    "ir_datasets",
    "docstring_parser",
    "impact-index==0.30.*",
    "omegaconf>=2.2",
    "attrs",
    # Information retrieval libraries
    "ir-measures>=0.3.3",
    # Torch addons
    "toma",
    "pytorch-lightning",
    "xpm-torch",
]

[project.optional-dependencies]
anserini = [
    "pyserini >= 0.20.0"
]

neural = [
    "torch>=1.12",
    "tensorboard",
    "transformers",
    "sentence_transformers"
]

[dependency-groups]
documentation = [
    "Sphinx>6",
    "myst-parser",
    "mock",
    "sphinx-toolbox",
    "sphinx-rtd-theme>=3",
    "sphobjinv"
]
test = [
    { include-group = "documentation" },
    "pytest",
    "faiss-cpu"
]
dev = [
    "docutils>=0.21.2",
    "faiss-cpu>=1.13.2",
    "pytest>=8.4.1",
    "sphinx>=8.1.3",
    "sphobjinv>=2.3.1.3",
]

[project.urls]
homepage = "https://github.com/bpiwowar/experimaestro-ir"
documentation = "https://experimaestro-ir.readthedocs.io/en/latest/"
repository = "https://github.com/bpiwowar/experimaestro-ir"

[project.scripts]
xpmir = "xpmir.__main__:main"

[project.entry-points."datamaestro.repositories"]
ir = "xpmir:Repository"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/xpmir/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/xpmir"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.pyright]
include = ["xpmir"]

[tool.uv.sources]
xpm-torch = { path = "../xpm-torch", editable = true }
