
[metadata]
name = experimaestro-ir
author = Benjamin Piwowarski
author_email = benjamin@piwowarski.fr
home_page = https://github.com/bpiwowar/experimaestro-ir
description = "Experimaestro common module for IR experiments"
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = GPL-3
license_files = LICENSE
platform = any
keywords = neural information retrieval, experiment platform
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
packages = find:
test_suite = xpmir.tests

[options.packages.find]
exclude =
    test*
    tools

[options.extras_require]
anserini =
    pyserini

neural =
    torch>=1.10
    tensorboard

[bdist_wheel]
universal = true

[sdist]
formats = zip

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
max-line-length = 88
# See https://github.com/PyCQA/pycodestyle/issues/373
extend-ignore = E203

[mypy]
python_version = 3.8
warn_unused_ignores = True
