
[metadata]
name = experimaestro-ir
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
test_suite = xpmir.test

[options.packages.find]
exclude =
    test*
    tools

[bdist_wheel]
universal = true

[sdist]
formats = zip

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[mypy]
python_version = 3.8
warn_unused_ignores = True
